--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <form action="" target="_blank" class="sform"> <button  class="sbutton">(нет)О нас</button> </form>
         <form action="https://github.com/Aliexpress228/oursites" target="_blank" class="sform"> <button  class="sbutton">Исходники</button> </form>
     </div>
-    <h2 class="name">Здесь сайты лохов(учеников нашего класса)</h2>
+    <h1 class="name">Здесь сайты учеников 10"В" 2020-2021</h1>
+	<h3 class="name">Тот самый где учился Штей</h3>
 	<div>
 		<table id = "tables" border="1" width="100%" cellpadding="5">
 		   <tr>
