--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  <tr>
 			<td>Штей Вячеслав</td>
 			<td>прикол</td>
-			<td><a href="https://voundervvv.github.io/developing-site/hello.html">штей.рф</a></td>
+			<td><a href="http://shtey.ga/">штей.рф</a></td>
 		  </tr>
 		  <tr>
 			<td>Оглая Ашуркова</td>
