--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<td><a href="http://shtey.ga/">штей.рф</a></td>
 		  </tr>
 		  <tr>
-			<td>Оглая Ашуркова</td>
+			<td>О(А)глая Ашуркова</td>
 			<td>прикол</td>
 			<td><a href="https://aaglaya.github.io/site/">оглая.com</a></td>
 		  </tr>
@@ -47,9 +47,9 @@
 			<td><a href="https://ahegao.ga/">аниме.лох</a></td>
 		  </tr>
 		  <tr>
-			<td>Николай Орехов + Ракитин Алексей</td>
+			<td>Иван Орешков</td>
 			<td>прикол</td>
-			<td><a href="https://docemmet.tk">анекдоты.смех</a></td>
+			<td><a href="docemmet.tk">анекдоты.смех</a></td>
 		  </tr>
 		  <tr>
 			<td>Луценко Владимир</td>
