--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		  <tr>
 			<td>Иван Орешков</td>
 			<td>прикол</td>
-			<td><a href="://docemmet.tk">анекдоты.смех</a></td>
+			<td><a href="http://docemmet.tk">анекдоты.смех</a></td>
 		  </tr>
 		  <tr>
 			<td>Луценко Владимир</td>
